--- a/static/chrome/local/Dockerfile
+++ b/static/chrome/local/Dockerfile
@@ -49,6 +49,7 @@ RUN \
          xdg-utils \
          libcurl4 \
          iproute2 \
+         xdotool \
          curl && \
          curl -O http://host.docker.internal:8080/google-chrome.deb && \
          apt-get -y purge curl && \
