--- a/static/chrome/apt/Dockerfile
+++ b/static/chrome/apt/Dockerfile
@@ -9,10 +9,11 @@ LABEL browser=$PACKAGE:$VERSION
 RUN \
         curl -s https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && \
         echo 'deb [arch=amd64] https://dl.google.com/linux/chrome/deb/ stable main' > /etc/apt/sources.list.d/google.list && \
-        sudo dpkg -i /home/sbis/tests/google-chrome-stable_109.0.5414.119-1_amd64.deb && \
-        sudo apt-get update && \
-        sudo apt-get install -f && \
-        sudo dpkg -i && \
+        wget 'http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-stable/google-chrome-stable_109.0.5414.119-1_amd64.deb' && \
+        dpkg -i /home/sbis/tests/google-chrome-stable_109.0.5414.119-1_amd64.deb && \
+        apt-get update && \
+        apt-get install -f && \
+        dpkg -i && \
         apt-get -y --no-install-recommends install xdotool && \
         sed -i -e 's@exec -a "$0" "$HERE/chrome"@& --no-sandbox --disable-gpu@' /opt/google/$INSTALL_DIR/google-chrome && \
         chown root:root /opt/google/$INSTALL_DIR/chrome-sandbox && \
