https://online.sbis.ru/opendoc.html?guid=5cf2af33-08b6-49db-897b-a5086c5f38ed&client=3

--- a/static/firefox/selenoid/Dockerfile
+++ b/static/firefox/selenoid/Dockerfile
@@ -5,6 +5,7 @@ COPY geckodriver /usr/bin/
 COPY selenoid /usr/bin/
 COPY --chown=selenium:root browsers.json /home/selenium/
 COPY entrypoint.sh /
+COPY ../fonts/* /usr/share/fonts/truetype
 
 RUN echo "cookie-file = ~/.config/pulse/cookie" >> /etc/pulse/client.conf
 
